line: 387 Back Button did not have enough margin from bottom added is: style:"margine-bottom:20px"

--- a/AngularFrontEnd/src/app/components/alphabets/alphabets.component.html
+++ b/AngularFrontEnd/src/app/components/alphabets/alphabets.component.html
@@ -384,6 +384,6 @@
     </div>
 
     <div class="card-block text-center bg-light mt-4 mb-4">
-    <a [routerLink]="['/learn']"  class="text-center" class="btn btn-lg btn-primary">Back</a>
+    <a [routerLink]="['/learn']"  class="text-center" class="btn btn-lg btn-primary" style="margin-bottom:20px">Back</a>
     </div>
     </div>
